@@ -25,3 +25,4 @@ For current:
 * ekspiulo <ekspiulo@gmail.com>
 * Tomasz Maciejewski <ponton@jabster.pl>
 * Ben Dowling <ben.m.dowling@gmail.com>
+* Zach Sheperd <eightball1989@gmail.com>
